tests/negative/neg_pr1162_removed_null_statement.safe
package neg_pr1162_removed_null_statement

   function consume

      null
